--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
         "uncompress" : false
     },
     "uploader" : {
-        "parser" : "parser:load_annotations"
+        "parser" : "parser:load_annotations",
+        "on_duplicates" : "error"
     }
 }
